Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -121,6 +121,7 @@
 }
 
 .phone {
+    position: relative;
     z-index: 1;
 }
 
